--- a/src/src/styles/home.css
+++ b/src/src/styles/home.css
@@ -1,6 +1,54 @@
 .phaser-edit-container {
 	width: 100%;
 	height: 100%;
-	min-height: 600px;
+	min-height: 100%;
+	background-color: #1e1e1e;
+}
+
+.top-panels {
 	justify-content: space-between;
+	gap: 1rem;
+	padding: 0.8rem 1rem;
+}
+
+.bottom-panel {
+	padding: 0.8rem;
+}
+
+.panel-header {
+	font-size: 20pt;
+	text-align: center;
+	padding-top: 0.8rem 0 0 0;
+}
+
+.left-panel {
+	background-color: #514f4f;
+	width: 50%;
+	height: 400px;
+	border-radius: 6px;
+}
+
+.right-panel {
+	background-color: #514f4f;
+	height: 400px;
+	width: 50%;
+	border-radius: 6px;
+}
+
+.action-bar {
+	padding: 0.8rem 1rem;
+	gap: 1rem;
+}
+
+.action-button {
+	padding: 0.4rem 1rem;
+	font-size: 18pt;
+	text-decoration: none;
+	color: white;
+	background-color: rgb(81, 81, 81);
+	border-radius: 6px;
+}
+
+.action-button:hover {
+	border: 1px solid white;
 }
